Fix gosec version string

--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ runs:
     - name: Checkout Source
       uses: actions/checkout@v3
     - name: Run Gosec Security Scanner
-      uses: securego/gosec@2.14.0
+      uses: securego/gosec@v2.14.0
       with:
         args: --exclude-generated=true --severity=medium --concurrency=1 --fmt json --out=gosec-results.json --stdout --verbose=text --no-fail ./...
     - name: Configure AWS Credentials
