--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,7 @@ runs:
       with:
         args: ${{ inputs.gosec-args }}
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v1-node16
       with:
         audience: https://github.com/launchdarkly
         role-to-assume: ${{ inputs.aws-assume-role }}
